# reliability-trace

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml  render.yaml
backend/: Dockerfile  __init__.py
backend/reliability_graph/: __init__.py  api.py  benchmarks.py  config.py  evals.py  retrieval.py  schemas.py  secrets.py  storage.py  verifier.py  web_search.py
backend/reliability_graph/pipeline/: __init__.py  engine.py  scoring.py
backend/reliability_graph/providers/: __init__.py  anthropic.py  async_utils.py  base.py  gemini.py  http.py  openai_compatible.py  registry.py
configs/: reliability_score_weights.json
docs/: AI_CONTEXT.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  FRONTEND_DESIGN_OPTIONS.md  PLAN_STATUS.md  RESEARCH.md  REVIEW_READINESS.md  RUNBOOK.md  SECURITY.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  components.tsx  markdown.tsx  report.tsx  styles.css  types.ts
scripts/: calibrate_reliability_weights.py  run_reliability_evals.py  setup_nli_verifier.py  smoke_usecases.py
tests/: test_api_stream.py  test_config.py  test_eval_harness.py  test_pipeline.py  test_retrieval_benchmarks.py  test_scoring.py  test_secrets_storage.py  test_web_search.py
