[project]
name = "reliability-graph"
version = "0.1.0"
description = "Local-first BYOK answer-reliability debugger"
requires-python = ">=3.14,<3.15"
dependencies = [
  "cryptography>=42",
  "fastapi>=0.121",
  "huggingface-hub>=1",
  "numpy>=2.3",
  "onnxruntime>=1.23",
  "tokenizers>=0.22",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
